fix: Add z-index to correct positioning of tooltips (#195)

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -104,4 +104,6 @@ hr {
 
 .TyperighterPlugin__decoration-container {
   position: absolute;
+  // Raise our tooltips above our sidebar content
+  z-index: 10;
 }
